@@ -134,6 +134,7 @@ INSTALLER
 PACKAGES
     Added: Monsta FTP package
     Fixed: ERR_INCOMPLETE_CHUNKED_ENCODING error due to wrong permissions on nginx fastcgi cache directory (FrontEnd)
+    Fixed: Missing IP version check (Package::FrontEnd::Installer)
     Fixed: White page due to 'net::ERR_INCOMPLETE_CHUNKED_ENCODING' errors (related to #IP-1530) (PhpMyAdmin)
     Updated: PhpMyAdmin version to 4.6.0 - Only for servers with PHP/MySQL >= 5.5 (Package::PhpMyAdmin::Installer)
     Disabled: Pydio in case PHP >= 7.0.0 is detected
